[VEUE-568]: Fix replay date positioning on Safari

--- a/app/javascript/style/video/_header_bar.scss
+++ b/app/javascript/style/video/_header_bar.scss
@@ -91,7 +91,6 @@
       color: color.$white;
       font-weight: font.$heavy-weight;
       position: relative;
-      z-index: 1;
 
       &:hover {
         background: color.$neutral-darker;
